--- a/app/src/main/res/layout/activity_creating.xml
+++ b/app/src/main/res/layout/activity_creating.xml
@@ -139,8 +139,8 @@
 
     <ImageView
         android:id="@+id/img_create_foto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginStart="180dp"
         android:layout_marginTop="25dp"
         android:background="@drawable/fot"
